@@ -67,6 +67,12 @@
         />
 
     <browser:resourceDirectory
+        name="eea.design.javascripts"
+        directory="javascripts"
+        layer=".interfaces.IEEACommonLayer"
+        />
+
+    <browser:resourceDirectory
         name="eea.design.templates"
         directory="templates"
         layer=".interfaces.IEEACommonLayer"
@@ -338,6 +344,16 @@
         class=".subfolder_listing.SubfolderListing"
         attribute="disable"
         permission="plone.app.controlpanel.Navigation"
+        />
+
+    <!-- Presentation view override -->
+    <browser:page
+        name="presentation_view"
+        for="Products.ATContentTypes.interface.IATDocument"
+        class=".presentation.EEAPresentationView"
+        layer=".interfaces.IEEACommonLayer"
+        template="templates/presentation.pt"
+        permission="zope2.View"
         />
 
     <!-- Customized portlets -->
